CHANGES.txt - 2006-05-10
------------------------

CHANGES IN CUPS V1.3
