@@ -160,7 +160,7 @@
 *OpenUI *zePrintRate/Print Rate: PickOne
 *OrderDependency: 20 AnySetup *zePrintRate
 *DefaultzePrintRate: Default
-*zePrintRate Default/PrinterDefault: Default
+*zePrintRate Default/PrinterDefault: ""
 *zePrintRate 1/1 inch/sec.: ""
 *zePrintRate 2/2 inches/sec.: ""
 *zePrintRate 3/3 inches/sec.: ""
